# code_challenge_reviewer

./: .gitignore  README.md  agents.py  app.py  github_helper.py  main.py  makefile  pyproject.toml  review_crew.py  tasks.py
josoroma/New-Kidz-On-The-Grid/: 2024_07_29_19_57_20.md
josoroma/code_challenge_reviewer/: 2024_07_29_20_26_32.md  2024_08_04_09_32_11.md  2024_08_04_09_37_45.md  2024_08_04_09_38_53.md  2024_08_04_09_44_38.md  2024_08_04_09_45_43.md  2024_08_04_10_04_56.md  2024_08_04_10_09_26.md  2024_08_04_10_11_17.md  2024_08_04_10_12_05.md  2024_08_04_10_15_57.md  2024_08_04_10_36_54.md  2024_08_04_10_41_56.md  2024_08_04_10_43_36.md  2024_08_04_10_44_33.md  2024_08_04_10_45_42.md  2024_08_04_10_48_26.md  2024_08_04_10_50_31.md  2024_08_04_10_51_49.md  2024_08_04_10_53_12.md  2024_08_04_10_54_13.md  2024_08_04_11_00_29.md  2024_08_04_11_01_48.md  2024_08_04_11_02_36.md  2024_08_04_11_06_41.md  2024_08_04_11_07_53.md  2024_08_04_11_08_46.md  2024_08_04_13_15_45.md  2024_08_04_13_17_18.md  2024_08_04_13_19_48.md  2024_08_04_13_21_32.md  2024_08_04_13_25_00.md  2024_08_04_13_26_10.md  2024_08_04_13_28_06.md  2024_08_04_13_33_34.md  2024_08_04_13_43_43.md  2024_08_04_16_54_35.md  2024_08_04_16_59_22.md  2024_08_04_17_00_56.md  2024_08_04_17_08_09.md  (+5 more)
src/: agents.py  constants.py  github_helper.py  main.py  review_crew.py  tasks.py  tools.py
