[tool.poetry]
name = "code_challenge_reviewer"
version = "1.0.0"
description = "Code Challenge Reviewer"
authors = ["Josoroma <pablo@josoroma.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9,<=3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"